--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,9 +5,7 @@
   -o-background-size: cover;
   background-size: cover;
 } */
-body {
-  display: flex;
-}
+
 /* 
 .img-box {
   background-size: cover;
@@ -24,6 +22,7 @@ iframe {
   width: 100%;
 } */
 
+
 .head-banner {
   position: absolute; 
   top: 0; 
@@ -38,7 +37,47 @@ iframe {
   opacity: 0.5;
 }
 
+#globediv {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 70px;
+}
+
 .search-and-output {
+ 
+}
+
+.search-form {
+   position: absolute;
+    margin-left: 49.3%;
+    margin-right: -50%;
+    top: 75px;
+    transform: translate(-50%, -50%);
+}
+#output {
+  position: absolute;
+    margin-left: 49.3%;
+    margin-right: -50%;
+    top: 95px;
+    transform: translate(-50%, -50%);
+    margin-top: 10px;
+    font-size: 30px;
+}
+#part-of-speech-and-def {
+  position: absolute;
+    margin-left: 49.3%;
+    margin-right: -50%;
+    top: 135px;
+    transform: translate(-50%, -50%);
+    font-size: 15px;
+}
+#searchBar {
+  width: 210px;
+}
+
+
+
+/* .search-and-output {
   
 }
 
@@ -71,4 +110,4 @@ iframe {
     position: relative;
     top: 70px;
     right: 45%;
-}
+} */
