--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -40,12 +40,10 @@ iframe {
 #globediv {
   margin-left: auto;
   margin-right: auto;
-  margin-top: 90px;
+  margin-top: 120px;
 }
 
-.search-and-output {
- 
-}
+
 
 .search-form {
    position: absolute;
@@ -67,15 +65,15 @@ iframe {
   position: absolute;
     margin-left: 49.3%;
     margin-right: -50%;
-    top: 143px;
+    top: 150px;
     transform: translate(-50%, -50%);
-    font-size: 15px;
-    width: 55%;
+    font-size: 12px;
+    width: 62%;
     text-align: center;
 }
 #part-of-speech {
   position: absolute;
-    margin-left: 69.3%;
+    margin-left: 64.3%;
     margin-right: -70%;
     top: 108px;
     transform: translate(-50%, -50%);
@@ -86,13 +84,24 @@ iframe {
 }
 #pronunciation {
   position: absolute;
-    margin-left: 29.3%;
+    margin-left: 32.4%;
     margin-right: -70%;
     top: 108px;
     transform: translate(-50%, -50%);
     font-size: 15px;
     width: 30%;
     text-align: center;
+}
+#etymologies {
+  position: absolute;
+    margin-left: 49.3%;
+    margin-right: -70%;
+    top: 208px;
+    transform: translate(-50%, -50%);
+    font-size: 1px;
+    width: 30%;
+    text-align: center;
+    z-index: -3;
 }
 
 
@@ -101,38 +110,3 @@ iframe {
 }
 
 
-
-/* .search-and-output {
-  
-}
-
-.search-form {
-    position: relative;
-    top: 65px;
-    left: 25%;
-    text-align: center;
-    height: 20px;
-}
-#output {
-  position: absolute;
-    top: 86px;
-    text-align: center;
-    font-size: 25px;
-}
-#part-of-speech-and-def {
-  position: absolute;
-    top: 116px;
-    left: 225px;
-    text-align: center;
-    width: 50%;
-    font-size: 12px;
-}
-
-#main-body {
-}
-
-#globediv {
-    position: relative;
-    top: 70px;
-    right: 45%;
-} */
