--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -40,7 +40,7 @@ iframe {
 #globediv {
   margin-left: auto;
   margin-right: auto;
-  margin-top: 120px;
+  margin-top: 137px;
 }
 
 
@@ -102,6 +102,16 @@ iframe {
     width: 30%;
     text-align: center;
     z-index: -3;
+}
+#languages {
+  position: absolute;
+    margin-left: 12.4%;
+    margin-right: -70%;
+    top: 108px;
+    transform: translate(-50%, -50%);
+    font-size: 15px;
+    width: 30%;
+    text-align: center;
 }
 
 
